--- a/src/assets/colors.css
+++ b/src/assets/colors.css
@@ -1,13 +1,13 @@
 :root {
-    --black: #120C14;
-    --black-second: #241828;
-    --white: #F9F1FF;
-    --purple-dark: #560855;
-    --purple-mid: #A3268F;
-    --purple-light: #A979B0;
-    --tag-green: #146284;
-    --tag-purple-dark: #6B0C5C;
-    --tag-vio-blue: #783DC5;
-    --tag-orange: #BC6600;
-    --tag-orange: #8A61BB;
+  --black: #120c14;
+  --black-second: #241828;
+  --black-box: #2c1f3036;
+  --white: #f9f1ff;
+  --purple-dark: #560855;
+  --purple-mid: #a3268f;
+  --purple-light: #a979b0;
+  --tag-green: #146284;
+  --tag-purple-dark: #6b0c5c;
+  --tag-vio-blue: #783dc5;
+  --tag-orange: #bc6600;
 }
